add timeMinutes to step + update receipt feed and modal