@@ -1,7 +1,6 @@
 package br.com.heycheff.api.app.controller;
 
 import br.com.heycheff.api.app.dto.StepDTO;
-import br.com.heycheff.api.app.dto.TagDTO;
 import br.com.heycheff.api.app.dto.response.PageResponse;
 import br.com.heycheff.api.app.dto.response.ReceiptFeed;
 import br.com.heycheff.api.app.dto.response.ReceiptId;
@@ -18,6 +17,7 @@ import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.util.Collections;
 import java.util.List;
 
 import static br.com.heycheff.api.app.service.ReceiptServiceTest.multipart;
@@ -49,7 +49,9 @@ class ReceiptControllerTest {
     void loadFeed() throws Exception {
         when(service.loadFeed(1, 1))
                 .thenReturn(new PageResponse<>(
-                        List.of(new ReceiptFeed(ID, "thumb", "title")), 1L)
+                        List.of(new ReceiptFeed(
+                                ID, "thumb", "title", Collections.emptyList(), 15)
+                        ), 1L)
                 );
 
         mvc.perform(get(URL)
@@ -73,14 +75,14 @@ class ReceiptControllerTest {
                 .andExpect(status().isOk())
                 .andExpect(content()
                         .contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.tags[0].id", is(1)))
                 .andExpect(jsonPath("$.steps[0].modoPreparo", is("prepare")));
     }
 
     private ReceiptModal modal() {
         var modal = new ReceiptModal();
-        modal.setTags(List.of(new TagDTO(1, "tag")));
-        modal.setSteps(List.of(new StepDTO("path", 1, emptyList(), "prepare")));
+        modal.setSteps(List.of(new StepDTO(
+                "path", 1, emptyList(), "prepare", 15
+        )));
         return modal;
     }
 
